first_project/blog/infra/k8s/comments-depl.yaml
# This is the yaml for the comments deployment

apiVersion: apps/v1 # pods in v1, but we have deployment, so need apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1 # number of pods
  selector: # select according to the following rule
    matchLabels: # "look for all pods that are created with label 'app': comments"
      app: comments

  template:
    # configure the pod
    metadata:
      labels:
        app: comments # assign label 'app': comments
    spec:
      containers:
        - name: comments
          image: joesjoski/comments:latest # or joesjoski/comments without the tag
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector: # select pods which traffic will be directed to (look for label)
    app: comments # label to look for
  type: ClusterIP # (optional) Service defaults to type: ClusterIP
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
