first_project/blog/infra/k8s/event-bus-depl.yaml
# This is the yaml for the event-bus deployment

apiVersion: apps/v1 # pods in v1, but we have deployment, so need apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1 # number of pods
  selector: # select according to the following rule
    matchLabels: # "look for all pods that are created with label 'app': event-bus"
      app: event-bus

  template:
    # configure the pod
    metadata:
      labels:
        app: event-bus # assign label 'app': event-bus
    spec:
      containers:
        - name: event-bus
          image: joesjoski/event-bus:latest # or joesjoski/event-bus without the tag
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  selector: # select pods which traffic will be directed to (look for label)
    app: event-bus # label to look for
  type: ClusterIP # (optional) Service defaults to type: ClusterIP
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
