first_project/blog/infra/k8s/moderation-depl.yaml
# This is the yaml for the moderation deployment

apiVersion: apps/v1 # pods in v1, but we have deployment, so need apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1 # number of pods
  selector: # select according to the following rule
    matchLabels: # "look for all pods that are created with label 'app': moderation"
      app: moderation

  template:
    # configure the pod
    metadata:
      labels:
        app: moderation # assign label 'app': moderation
    spec:
      containers:
        - name: moderation
          image: joesjoski/moderation:latest # or joesjoski/moderation without the tag
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector: # select pods which traffic will be directed to (look for label)
    app: moderation # label to look for
  type: ClusterIP # (optional) Service defaults to type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
