first_project/blog/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts # selects things with label 'posts', like classes in html and css
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # the port on the Node Port Service (the one used to access the pod)
      targetPort: 4000 # port on the pod (the one the posts index.js is listening on)
