first_project/blog/infra/k8s/query-depl.yaml
# This is the yaml for the query deployment

apiVersion: apps/v1 # pods in v1, but we have deployment, so need apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1 # number of pods
  selector: # select according to the following rule
    matchLabels: # "look for all pods that are created with label 'app': query"
      app: query

  template:
    # configure the pod
    metadata:
      labels:
        app: query # assign label 'app': query
    spec:
      containers:
        - name: query
          image: joesjoski/query:latest # or joesjoski/query without the tag
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector: # select pods which traffic will be directed to (look for label)
    app: query # label to look for
  type: ClusterIP # (optional) Service defaults to type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
