first_project/blog/infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations: # helps the ingress controller know we are feeding it routing rules
    kubernetes.io/ingress.class: nginx # the controller will look for this annotation
spec:
  rules: # rules of how the ingress controller will route requests
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
